--- a/Smart/Views/Product/Add.cshtml
+++ b/Smart/Views/Product/Add.cshtml
@@ -25,5 +25,6 @@
 @section Scripts {
     <script src="~/js/imgSrcComponent.js"></script>
     <script src="~/js/views/product-createorupdate.js"></script>
-   
+    <script>productJS.InitCreateorUpdate()</script>
+
 }
