--- a/Smart/Views/StockStats/Reports.cshtml
+++ b/Smart/Views/StockStats/Reports.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="col">
         <p class="h4 font-weight-light">
-            <a asp-action="ProductWithutSaldo" asp-controller="StockStats" class="text-dark">
+            <a asp-action="ProductStock" asp-controller="StockStats" class="text-dark">
                 @Localizer["Saldo de Itens"]
             </a>
         </p>
