--- a/Smart/Views/Bank/List.cshtml
+++ b/Smart/Views/Bank/List.cshtml
@@ -1,9 +1,6 @@
 @model IEnumerable<Core.Domain.Finance.Bank>
 @{ ViewData["Title"] = ViewsLocalizer["Conta Caixa"]; ViewBag.PageClass = "container"; }
-@{ ViewData.AddActivePageApp(ActivePagesApp.Bank); }
-@section topright{
-    @{ Html.RenderPartialIf("_HeaderConfiguracoes", SignInManager.IsSignedIn(User)); }
-}
+@{ ViewData.AddActivePageApp(ActivePagesApp.RegBank); }
 <h4> @ViewData["Title"] <small class="text-danger"> @Model.Count() </small></h4>
 <hr class="myb-4" />
 <div class="row">
