--- a/Smart/Views/Invoice/Add.cshtml
+++ b/Smart/Views/Invoice/Add.cshtml
@@ -1,6 +1,9 @@
-@model Core.Domain.Finance.Bank
-@{ ViewData["Title"] = ViewsLocalizer["Conta Caixa"]; ViewBag.PageClass = "container"; }
-@{ ViewData.AddActivePageApp(ActivePagesApp.RegBank); }<h4>@SharedLocalizer["Dados da"] @ViewData["Title"]</h4>
+﻿@model Core.Domain.Sale.Invoice
+@{ ViewData["Title"] = ViewsLocalizer["Notas Fiscais"]; ViewBag.PageClass = "container"; }
+@{ ViewData.AddActivePageApp(ActivePagesApp.Invoice); }
+
+
+<h4>@SharedLocalizer["Dados da"] @ViewData["Title"]</h4>
 <hr class="myb-4" />
 <div class="row">
     <div class="col-12">
@@ -12,10 +15,14 @@
                         <button asp-route-continueAdd="false" type="submit" class="btn btn-success btn-bdr">
                             <span class="btn-label"></span>@SharedLocalizer["Salvar"]
                         </button>
-                        <a asp-action="List" asp-controller="Bank" class="btn btn-light btn-bdr"> <span class="btn-label"><i class="glyphicon glyphicon-chevron-left"></i></span>@SharedLocalizer["Voltar"] </a>
+                        <a asp-action="List" asp-controller="Invoice" class="btn btn-light btn-bdr"> <span class="btn-label"><i class="glyphicon glyphicon-chevron-left"></i></span>@SharedLocalizer["Voltar"] </a>
                     </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/views/invoice.js"></script>
+}
