--- a/Smart/Views/Manage/Index.cshtml
+++ b/Smart/Views/Manage/Index.cshtml
@@ -3,11 +3,13 @@
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
 }
+@Html.HiddenFor(a => a.avatarImage)
+
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username">@LoginLocalizer["Usuário"]</label>
@@ -31,13 +33,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber">@LoginLocalizer["Fone"]</label>
-                    <input asp-for="PhoneNumber" class="form-control" />
+                <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
+            <div class="form-group">
+
+                <img id="imageID" data-img="@Model.Image" name="imageID" src="@Url.Action("AvatarAsync", "Manage")" class="img-thumbnail" />
+                <br />
+                <input type="file" class="form-control" name="avatarImage" onchange="imgsrccomponent.readURL(this)" />
+            </div>
             <button type="submit" class="btn btn-success btn-block">@LoginLocalizer["Salvar"]</button>
+
+           
         </form>
     </div>
 </div>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
+    <script src="~/js/ImgSrcComponent.js"></script>
 }
