--- a/Smart/Views/Person/List.cshtml
+++ b/Smart/Views/Person/List.cshtml
@@ -67,17 +67,17 @@
                                 <td class="table-item-body">
                                     @Html.DisplayFor(modelItem => item.PersonCode)
                                 </td>
-                                <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@item.FirstName">
-                                    <a asp-action="Edit" asp-route-id="@item.PersonId" class=" "> @Html.Truncate(item.FirstName, 40)</a>
+                                <td class="table-item-body clickable-row" data-toggle="tooltip" data-placement="top" title="@item.FirstName" data-href="@Url.Action("Edit", "Person",   new { id = item.PersonId })">
+                                    @Html.Truncate(item.FirstName, 40) 
 
                                 </td>
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row" data-href="@Url.Action("Edit", "Person",   new { id = item.PersonId })">
                                     @Html.DisplayFor(modelItem => item.RegistrationCode)
                                 </td>
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row" data-href="@Url.Action("Edit", "Person",   new { id = item.PersonId })">
                                     @Html.DisplayFor(modelItem => item.Phone)
                                 </td>
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row" data-href="@Url.Action("Edit", "Person",   new { id = item.PersonId })">
                                     @Html.DisplayFor(modelItem => item.Active)
                                 </td>
 
