--- a/Smart/Views/Revenue/List.cshtml
+++ b/Smart/Views/Revenue/List.cshtml
@@ -74,15 +74,16 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
+                            string urlEdit = Url.Action("Edit", "Revenue", new { id = item.RevenueId });
                             <tr class="table-row-body">
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row " data-href="@urlEdit">
                                     @Html.DisplayFor(modelItem => item.RevenueNumber)/@Html.DisplayFor(modelItem => item.RevenueSeq)
                                 </td>
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row " data-href="@urlEdit">
                                     @Html.DisplayFor(modelItem => item.DueDate)
                                 </td>
-                                <td class="table-item-body" data-toggle="tooltip" data-placement="top" title="@item.Name : @item.Comment">
-                                    <a asp-action="Edit" asp-route-id="@item.RevenueId" class=" "> @item.Name.Truncate(30, true) </a>
+                                <td class="table-item-body clickable-row " data-href="@urlEdit" data-toggle="tooltip" data-placement="top" title="@item.Name : @item.Comment">
+                                    @item.Name.Truncate(30, true)
                                     @if (item.RevenueTotalSeq > 1)
                                     {
                                         <span class="badge badge-success">
@@ -91,7 +92,7 @@
                                         </span>
                                     }
                                 </td>
-                                <td class="table-item-body">
+                                <td class="table-item-body clickable-row " data-href="@urlEdit">
                                     @{ string saldo = item.AmountFinal.ToString("c"); }
                                     @saldo
                                 </td>
