--- a/Smart/Views/Shared/_HeaderConfiguracoes.cshtml
+++ b/Smart/Views/Shared/_HeaderConfiguracoes.cshtml
@@ -1,6 +1,7 @@
-﻿<header style="background-color: #005a86">
+﻿<header style="background-color: #000">
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark" style=" background-color: #005a86;">
+        <nav class="navbar navbar-expand-lg navbar-dark" style=" background-color: #000;">
+            
             <a class="navbar-brand" asp-action="List" asp-controller="CategoryPerson">
                 Configurações
             </a>
