--- a/Smart/Views/Revenue/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Revenue/_CreateOrUpdate.cshtml
@@ -11,10 +11,11 @@
 @Html.HiddenFor(a => a.ModifiedDate)
 @Html.HiddenFor(a => a.Deleted)
 @Html.HiddenFor(a => a.BusinessEntityId)
+@Html.HiddenFor(a => a.CreateDate)
 @*@if (isedit)
-{
-    <input type="hidden" asp-for="Total" />
-}*@
+    {
+        <input type="hidden" asp-for="Total" />
+    }*@
 <div class="controls">
     <div class="form-row">
         <div class="form-group col-md-6">
@@ -40,12 +41,12 @@
         </div>
         <div class="form-group col-md-4">
             <label asp-for="DueDate">@Localizer["Vencimento"]</label>
-            <input asp-for="DueDate" placeholder="@Localizer["Vencimento"]" class="form-control datepicker" />
+            <input name="DueDate" id="DueDate" type="text" value="@(Model.DueDate.Value.ToShortDateString())" placeholder="@Localizer["Vencimento"]" class="form-control datepicker" />
             <span asp-validation-for="DueDate" class="text-danger"></span>
         </div>
         <div class="form-group col-md-4">
             <label asp-for="Total">@Localizer["Total"]</label>
-            <input asp-for="Total" placeholder="@Localizer["Total"]" disabled="@isedit" class="form-control" 
+            <input asp-for="Total" placeholder="@Localizer["Total"]" disabled="@isedit" class="form-control"
                    data-thousands="." data-decimal="," />
             <span asp-validation-for="Total" class="text-danger"></span>
         </div>
@@ -53,7 +54,7 @@
     <br />
     <p>
         <a class="btn btn-outline-info" data-toggle="collapse" href="#multiCollapseDetails" role="button"
-           aria-expanded="false" aria-controls="multiCollapseExample1"> @Localizer["Detalhes da Conta"]</a>
+           aria-expanded="false" aria-controls="multiCollapseExample1">@Localizer["Detalhes da Conta"]</a>
     </p>
     <div class="collapse multi-collapse collapse" id="multiCollapseDetails">
         <div class="form-row">
